# career-readiness-agent

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
docs/resume/: career-readiness-agent.md
scripts/: chat.py  ingest.py  retrieval_demo.py  run_basic_test.ps1
src/career_agent/: __init__.py  agent.py  analysis.py  api.py  documents.py  embeddings.py  errors.py  initialization.py  jobs.py  memory.py  planning.py  profile.py  rag.py  research.py  resume.py  tools.py
tests/: test_api.py  test_basic_e2e.py  test_documents.py  test_errors.py  test_initialization.py  test_job_analysis_api.py  test_jobs.py  test_memory.py  test_planning.py  test_profile.py  test_rag.py  test_research.py  test_tools.py  test_web_ui.py
